@@ -3,10 +3,7 @@
 	<string id="30000">Size of search history</string>
 	<string id="30001">Preload metadata</string>
 	<string id="30002">[B]Search[/B]</string>
-	<string id="30003">[B]Search using ulozto[/B]</string>
-	<string id="30004">[B]Search using bezvadata[/B]</string>
-	<string id="30005">[B]Search using kinotip[/B]</string>
-	<string id="30006">[B]Search using movie-library[/B]</string>
+	<string id="30006">[B]Search online[/B]</string>
 	<string id="30007">[B]Movie information[/B]</string>
 	<string id="30008">Search for  </string>
 	<string id="30009">Add searches to addon's history</string>
@@ -18,11 +15,6 @@
 	<string id="30017">[B]Movie[/B]</string>
 	<string id="30018">[B]Person[/B]</string>
 	<string id="30019">Preloading metadata...</string>
-	<string id="30020">Enable search using</string>
-	<string id="30021"> - movie-library.cz</string>
-	<string id="30022"> - ulozto.cz</string>
-	<string id="30023"> - bezvadata.cz</string>
-	<string id="30024"> - kinotip.cz</string>
 	<string id="30025">In theaters</string>
 	<string id="30030">Downloads</string>
 	<string id="30031">Please setup downloads folder</string>
