@@ -1,3 +1,6 @@
+[B]1.0.3:[/B]
+ - odebrány integrace s nefunkčními pluginy
+ - přidána integrace s novým pluginem Online Soubory
 [B]1.0.2:[/B]
 - přidána možnost přihlášení
 - přihlášený uživatel může procházet svoje Oblíbené filmy, seriály ...
